// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submit.Blue renders without errors 1`] = `
<DocumentFragment>
  <input
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center dialog-icon-info hover:bg-blue-700 bg-blue-600 text-white"
    type="submit"
    value="Submit"
  />
</DocumentFragment>
`;

exports[`Submit.Fancy renders without errors 1`] = `
<DocumentFragment>
  <input
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center bg-gray-300 hover:bg-brand-200 dark:bg-neutral-600
    hover:dark:bg-brand:400 text-gray-800 dark:text-white text-center !inline"
    type="submit"
    value="Submit"
  />
</DocumentFragment>
`;

exports[`Submit.Gray renders without errors 1`] = `
<DocumentFragment>
  <input
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center button hover:bg-gray-400 bg-gray-300 text-gray-800
    dark:bg-neutral-600 dark:text-gray-100 hover:dark:bg-neutral-500"
    type="submit"
    value="Submit"
  />
</DocumentFragment>
`;

exports[`Submit.Green renders without errors 1`] = `
<DocumentFragment>
  <input
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center dialog-icon-success hover:bg-green-800 bg-green-700 text-white"
    type="submit"
    value="Submit"
  />
</DocumentFragment>
`;

exports[`Submit.Orange renders without errors 1`] = `
<DocumentFragment>
  <input
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center dialog-icon-warning hover:bg-orange-600 bg-orange-500 text-white"
    type="submit"
    value="Submit"
  />
</DocumentFragment>
`;

exports[`Submit.Red renders without errors 1`] = `
<DocumentFragment>
  <input
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center dialog-icon-error hover:bg-red-800 bg-red-700 text-white"
    type="submit"
    value="Submit"
  />
</DocumentFragment>
`;

exports[`Submit.Small renders without errors 1`] = `
<DocumentFragment>
  <input
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center !py-1 !px-2 button hover:bg-gray-400 bg-gray-300 text-gray-800
    dark:bg-neutral-600 dark:text-gray-100 hover:dark:bg-neutral-500 ring-1 ring-gray-400 dark:ring-0
    disabled:ring-gray-500 disabled:dark:ring-neutral-500 hover:bg-brand-200 dark:hover:bg-brand-400"
    type="submit"
    value="Submit"
  />
</DocumentFragment>
`;
